--- a/z_lib_main/src/main/res/values/strings.xml
+++ b/z_lib_main/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="main_app_name">z_lib_main</string>
+    <string name="main_app_name">main组件</string>
+
+    <string name="main_app_exit_hint">再按一次退出程序</string>
+    <string name="main_title_activity_fragment_module">Fragment组件化</string>
+    <string name="main_title_home">news</string>
+    <string name="main_title_dashboard">girls</string>
+    <string name="main_title_notifications">预留</string>
 </resources>
