--- a/z_lib_common/src/main/res/values/strings.xml
+++ b/z_lib_common/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
     <string name="load_error_resume">加载出错，点击重试</string>
     <string name="more">更多</string>
     <string name="no_data">暂无数据</string>
+
+    <string name="home_info">资讯</string>
+    <string name="home_data">数据</string>
+    <string name="home_main_page">首页</string>
+    <string name="home_tool">工具</string>
+    <string name="home_mine">我的</string>
 </resources>
